[gd_scene load_steps=11 format=2]

[ext_resource path="res://game/blacksmith/Blacksmith.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Deutsch.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game/ui/ClickableReagentList.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/reagents/feather.png" type="Texture" id=4]
[ext_resource path="res://assets/images/ui/arrow.webp" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 59
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 95
outline_size = 9
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 38
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 78
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="Blacksmith" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 58.2214
margin_top = 948.668
margin_right = 258.221
margin_bottom = 1038.67
custom_fonts/font = SubResource( 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.5
margin_top = -45.0
margin_right = 252.5
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "upgrade reagent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmUpgrade" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.147
margin_top = 302.628
margin_right = 288.853
margin_bottom = 392.628
custom_fonts/font = SubResource( 2 )
text = "confirm upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 2.6499
margin_top = 50.8353
margin_right = 2.6499
margin_bottom = 152.835
custom_fonts/font = SubResource( 3 )
text = "Girotto's Smith & Grind"
align = 1
valign = 1

[node name="ClickableReagentList" parent="." instance=ExtResource( 3 )]
margin_left = 663.229
margin_top = 277.668
margin_right = 703.229
margin_bottom = 317.668

[node name="Arrow" type="TextureRect" parent="."]
margin_left = 858.844
margin_top = 306.73
margin_right = 1370.84
margin_bottom = 818.73
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reagent" type="Node2D" parent="."]
position = Vector2( 492.131, 343.197 )

[node name="Image" type="TextureRect" parent="Reagent"]
margin_right = 60.0
margin_bottom = 60.0
rect_scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Reagent"]
margin_left = -172.678
margin_top = 153.251
margin_right = 327.322
margin_bottom = 453.251
rect_min_size = Vector2( 500, 300 )
custom_fonts/font = SubResource( 4 )
text = "asdsada"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReagentUpgraded" type="Node2D" parent="."]
position = Vector2( 1318.83, 349.672 )

[node name="Image" type="TextureRect" parent="ReagentUpgraded"]
margin_right = 60.0
margin_bottom = 60.0
rect_scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ReagentUpgraded"]
margin_left = -172.678
margin_top = 157.568
margin_right = 327.322
margin_bottom = 457.568
rect_min_size = Vector2( 500, 300 )
custom_fonts/font = SubResource( 4 )
text = "asdsada"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="+" type="Label" parent="ReagentUpgraded"]
modulate = Color( 0.0470588, 1, 0, 1 )
margin_left = 142.7
margin_top = -33.3925
margin_right = 182.7
margin_bottom = 51.6075
custom_fonts/font = SubResource( 5 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Upgrade" to="." method="_on_Upgrade_pressed"]
[connection signal="pressed" from="ConfirmUpgrade" to="." method="_on_ConfirmUpgrade_pressed"]
[connection signal="reagent_pressed" from="ClickableReagentList" to="." method="_on_ClickableReagentList_reagent_pressed"]
